--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
   },
   "dependencies": {
     "gsap": "^3.12.5",
+    "motion": "^11.17.0",
     "next": "15.1.3",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-cool-inview": "^3.0.1",
+    "react-dom": "^19.0.0",
+    "react-scroll-parallax": "^3.4.5",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@types/node": "^20",
