--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "react": "^19.0.0",
     "react-cool-inview": "^3.0.1",
     "react-dom": "^19.0.0",
+    "react-intersection-observer": "^9.15.0",
     "react-scroll-parallax": "^3.4.5",
+    "styled-components": "^6.1.14",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
